--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -14,19 +14,13 @@ RUN make linux
 #
 # build the target container
 #
-FROM public.ecr.aws/debian/debian:bullseye-slim
+FROM public.ecr.aws/docker/library/alpine:3.18
 
 # update the packages
-RUN apt-get -y update && apt-get -y upgrade && apt-get -y install bash tzdata ca-certificates curl exiftool imagemagick wget xfonts-base xfonts-75dpi
-
-# copy in a blank policy.xml
-COPY package/data/policy.xml /etc/ImageMagick-6/policy.xml
-
-# get and install the wkhtmltopdf package
-RUN cd /tmp && wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6.1-2/wkhtmltox_0.12.6.1-2.bullseye_amd64.deb && dpkg -i wkhtmltox_0.12.6.1-2.bullseye_amd64.deb && rm wkhtmltox_0.12.6.1-2.bullseye_amd64.deb
+RUN apk update && apk upgrade && apk add bash tzdata ca-certificates curl exiftool imagemagick && rm -rf /var/cache/apk/*
 
 # Create the run user and group
-RUN groupadd -g 10708 libr-snlocal 
+RUN groupadd -g 10708 libr-snlocal
 RUN groupadd -g 16339 lb-digiserv && useradd -u 118698 -g lb-digiserv -G libr-snlocal libsnlocal
 
 # set the timezone appropriatly
