--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -20,8 +20,7 @@ FROM public.ecr.aws/docker/library/alpine:3.18
 RUN apk update && apk upgrade && apk add bash tzdata ca-certificates curl exiftool imagemagick && rm -rf /var/cache/apk/*
 
 # Create the run user and group
-RUN groupadd -g 10708 libr-snlocal
-RUN groupadd -g 16339 lb-digiserv && useradd -u 118698 -g lb-digiserv -G libr-snlocal libsnlocal
+RUN addgroup --gid 16339 lb-digiserv && adduser --uid 118698 libsnlocal -G lb-digiserv -D
 
 # set the timezone appropriatly
 ENV TZ=UTC
