Add the rclone binary

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -17,13 +17,16 @@ RUN make linux
 FROM public.ecr.aws/docker/library/alpine:3.18
 
 # update the packages
-RUN apk update && apk upgrade && apk add bash tzdata ca-certificates curl exiftool && rm -rf /var/cache/apk/*
+RUN apk update && apk upgrade && apk add bash tzdata ca-certificates curl exiftool wget && rm -rf /var/cache/apk/*
 
 # image magick support
 RUN apk add fftw-double-libs fontconfig freetype ghostscript ghostscript-fonts lcms2 libbz2 libgcc libgomp libheif libjxl libltdl libraw libx11 libxext libxml2 openjpeg pango tiff zlib
 COPY distro/bin/magick /usr/local/bin
 RUN ln -s /usr/local/bin/magick /usr/local/bin/convert && ln -s /usr/local/bin/magick /usr/local/bin/identify
 COPY distro/etc/ /usr/local/etc
+
+# rclone support
+RUN cd /tmp && wget https://downloads.rclone.org/rclone-current-linux-amd64.zip && unzip rclone-current-linux-amd64.zip && cp rclone-v*-linux-amd64/rclone /usr/local/bin && rm -fr rclone*
 
 # Create the run user and group
 RUN addgroup --gid 10708 libr-snlocal && addgroup --gid 16339 lb-digiserv && adduser --uid 118698 libsnlocal -G lb-digiserv -D && addgroup libsnlocal libr-snlocal
