--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -73,7 +73,7 @@ ARG BUILD_TAG
 RUN test -n "$BUILD_TAG" && touch $APP_HOME/buildtag.build-$BUILD_TAG || touch $APP_HOME/buildtag.build-0
 
 # Specify the user
-#USER libsnlocal
+USER libsnlocal
 
 #
 # end of file
